[project]
name = "scaffold-experiment-harness"
version = "0.1.0"
description = "Scaffold-centric S5 experiment harness for local Mac inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx-lm>=0.19.0",
    "flask>=3.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server:main"

[tool.uv]
dev-dependencies = []
